--- a/src/main/resources/templates/admin/admin-layout.html
+++ b/src/main/resources/templates/admin/admin-layout.html
@@ -106,7 +106,7 @@
 
 <footer class="footer mt-auto py-3 bg-light border-top fixed-bottom">
     <div class="container text-center">
-        <span class="text-muted">InvoiceApp &copy; <span th:text="${#dates.year(#dates.createNow())}"></span></span>
+        <span class="text-muted">Invoicer &copy; <span th:text="${#dates.year(#dates.createNow())}"></span></span>
     </div>
 </footer>
 
