--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <div th:fragment="body">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
         <div class="container-fluid">
             <a class="navbar-brand" href="/admin/dashboard">Invoicer</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav ms-auto align-items-center">
+                    <li class="nav-item" sec:authorize="hasRole('ADMIN')">
+                        <a class="nav-link" href="/admin/users">Manage Users</a>
+                    </li>
+                    <li class="nav-item" sec:authorize="hasRole('USER')">
+                        <a class="nav-link" th:href="@{/user/reset-password}">Reset Password</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/admin/invoices">Invoices</a>
                     </li>
@@ -18,7 +26,17 @@
                         <a class="nav-link" href="/admin/clients">Clients</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-danger" href="/logout">Logout</a>
+                        <form th:action="@{/logout}" method="post" class="d-inline">
+                            <input type="hidden"
+                                   th:if="${_csrf != null}"
+                                   th:name="${_csrf.parameterName}"
+                                   th:value="${_csrf.token}" />
+                            <button type="submit"
+                                    class="nav-link text-danger"
+                                    style="border:none; background:transparent; cursor:pointer; padding:0;">
+                                Logout
+                            </button>
+                        </form>
                     </li>
                 </ul>
             </div>
